--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 
 </head>
 
+<style>
+	@media (max-width: 768px) {
+		.main-nav {
+			display: block;
+		}
+	}
+</style>
+
 <body class="site-layout--landing preloader-is--active preloader--no-transform">
 
 	<div class="site-wrapper">
@@ -52,7 +60,7 @@
 			<nav class="main-nav">
 				<ul class="main-nav__list">
 					<li class="">
-            			<a href="https://thenextlevel.fun/portal">ELO BOOST</a>
+            			<a href="calculadora.html">ELO BOOST</a>
 					</li>
 					<li class="">
             			<a href="https://thenextlevel.fun/portal">MD10</a>
@@ -89,7 +97,7 @@
 			
 			<div class="site-content__center">
 				<h1 class="text-white landing-title"><span class="subtitle landing-subtitle">Encontre aqui a sua</span>Proxima Fase</h1>
-				<a href="sobreanextlevel.html" class="btn btn-primary btn-lg btn--landing"><span>COMECE POR AQUI</span></a>
+				<a href="calculadora.html" class="btn btn-primary btn-lg btn--landing"><span>COMECE POR AQUI</span></a>
 			</div>
 			<div class="video-full-bg">
 				<!-- Video Highlight -->
@@ -115,7 +123,7 @@
 		<footer id="footer" class="footer text-center">
 			<ul class="social-menu social-menu--landing social-menu--landing-glitch">
 				<li>
-					<a href="https://instagram.com/nextlevel.fun" target="_blank">
+					<a href="https://instagram.com/reielojob" target="_blank">
 						<i class="fab fa-instagram"></i>
 						<span class="link-subtitle">Instagram</span>reielojob
 					</a>
