calculadora elo boost

--- a/calculadora.html
+++ b/calculadora.html
@@ -93,7 +93,7 @@
 					<li class="active"><a href="index.html">Elo Boost</a></li>
                     <li class=""><a href="index.html">Duo Boost</a></li>
 					<li class=""><a href="index.html">MD10</a></li>
-                    <li class=""><a href="index.html">CHOACH</a></li>
+                    <li class=""><a href="index.html">COACH</a></li>
 				</ul>
 				</ul>
 			</nav>
