--- a/calculadora.html
+++ b/calculadora.html
@@ -8,7 +8,7 @@
 	<title>Rei do Elojob | Calculadora</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="eSports Team &amp; Gaming">
+	<meta name="description" content="Rei do Elojob é o serviço ideal para você subir o elo da sua conta! Faça o cálculo até o elo desejado!">
 	<meta name="author" content="Filipe Teixeira">
 	<meta name="keywords" content="esports team news HTML template">
 
