--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
 	html {
 		overflow-y: hidden;
 	}
+
+	.politicas {
+		color: #FFF;
+		text-decoration: underline;
+		cursor: pointer;
+	}
+
+	.politicas:hover {
+		color: #FFF;
+	}
+
 	@media (max-width: 768px) {
 		.main-nav {
 			display: block;
@@ -63,10 +74,10 @@
 			<nav class="main-nav">
 				<ul class="main-nav__list">
 					<li class="">
-            			<a href="calculadora.html">ELO BOOST</a>
+            			<a href="elo-boost.html">ELO BOOST</a>
 					</li>
 					<li class="">
-            			<a href="https://thenextlevel.fun/portal">MD10</a>
+            			<a href="md10.html">MD10</a>
 					</li>
 				</ul>
 			</nav>
@@ -82,11 +93,11 @@
 			<nav class="main-nav">
 				<ul class="main-nav__list">
 					<li class="">
-            			<a href="https://thenextlevel.fun/portal">DUO BOOST</a>
+            			<a href="duo-boost.html">DUO BOOST</a>
 					</li>
 					
 					<li class="">
-						<a href="https://thenextlevel.fun/portal">COACH</a>
+						<a href="coach.html">COACH</a>
 					</li>
 				</ul>
 			</nav>
@@ -100,7 +111,7 @@
 			
 			<div class="site-content__center">
 				<h1 class="text-white landing-title"><span class="subtitle landing-subtitle">Encontre aqui a sua</span>Proxima Fase</h1>
-				<a href="calculadora.html" class="btn btn-primary btn-lg btn--landing"><span>COMECE POR AQUI</span></a>
+				<a href="elo-boost.html" class="btn btn-primary btn-lg btn--landing"><span>COMECE POR AQUI</span></a>
 			</div>
 			<div class="video-full-bg">
 				<!-- Video Highlight -->
@@ -138,6 +149,9 @@
 					</a>
 				</li>
 			</ul>
+			<div class="d-flex justify-content-center">
+				<a href="politicas-de-privacidade.html" class="politicas">Políticas de privacidade</a>
+			</div>
 		</footer>
 		<!-- Footer / End -->
 
@@ -164,7 +178,6 @@
 		<!-- Overlay -->
 		<div class="site-overlay"></div>
 		<!-- Overlay / End -->
-
 	</div>
 
 	<div class="preloader-overlay">
