--- a/md10.html
+++ b/md10.html
@@ -99,7 +99,7 @@
 					<li class=""><a href="elo-boost.html">Elo Boost</a></li>
                     <li class=""><a href="duo-boost.html">Duo Boost</a></li>
 					<li class="active"><a href="md10.html">MD10</a></li>
-                    <li class=""><a href="elo-boost.html">COACH</a></li>
+                    <li class=""><a href="coach.html">COACH</a></li>
 				</ul>
 				</ul>
 			</nav>
