--- a/elo-boost.html
+++ b/elo-boost.html
@@ -5,12 +5,19 @@
 
 	<!-- Basic Page Needs
 	================================================== -->
-	<title>Rei do Elojob | Calculadora</title>
-	<meta charset="utf-8">
+	<title>Rei do Elojob | Elo Boost</title>
+		<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Rei do Elojob é o serviço ideal para você subir o elo da sua conta! Faça o cálculo até o elo desejado!">
-	<meta name="author" content="Filipe Teixeira">
-	<meta name="keywords" content="esports team news HTML template">
+	<meta name="description" content="Rei do Elojob é o serviço ideal para você subir o elo da sua conta! Boosting (Elojob), MD10 , Duo Boost, Coaching">
+	<meta name="author" content="Rei do Elojob">
+	<meta name="keywords" content="elojob md10 eloboost elo upar duoboost">
+	<meta property="og:locale" content="pt_BR">
+	<meta property="og:url" content="https://www.reidoelojob.com/elo-boost">
+	<meta property="og:title" content="Rei do Elojob | Elo Boost">
+	<meta property="og:site_name" content="Rei do Elojob">
+	<meta property="og:description" content="Rei do Elojob é o serviço ideal para você subir o elo da sua conta! Boosting (Elojob), MD10 , Duo Boost, Coaching">
+	<meta property="og:image" content="images/rei_cortada.png">
+	<meta property="og:image:type" content="image/jpeg">
 
 	<!-- Favicons
 	================================================== -->
@@ -303,6 +310,48 @@
 
 		<!-- Menu Panel -->
 		<div class="menu-panel">
+			<div class="menu-panel__navigation">
+				<div id="dl-menu" class="dl-menuwrapper">
+					<!-- <button class="dl-trigger">Open Menu</button> -->
+					<ul class="dl-menu dl-menuopen">
+						<li>
+							<a href="index.html">
+								Inicio
+							</a>
+						</li>
+						<li>
+							<a href="elo-boost.html">
+								Elo Boost
+							</a>
+						</li>
+						<li>
+							<a href="duo-boost.html">
+								Duo Boost
+							</a>
+						</li>
+						<li>
+							<a href="md10.html">
+								MD10
+							</a>
+						</li>
+						<li>
+							<a href="coach.html">
+								COACH
+							</a>
+						</li>
+						<li>
+							<a href="politicas-de-privacidade.html">
+								POLÍTICAS DE PRIVACIDADE
+							</a>
+						</li>
+						<li>
+							<a href="termos-de-uso.html">
+								TERMOS DE USO
+							</a>
+						</li>	
+					</ul>
+				</div>
+			</div>
 			<ul class="menu-panel__mobile-bar list-unstyled d-md-none">
 				<li class="mobile-bar-item">
 					<a class="mobile-bar-item__header collapsed" href="index.html">
@@ -322,6 +371,9 @@
 					</a>
 					<a class="mobile-bar-item__header collapsed" href="politicas-de-privacidade.html">
 						POLÍTICAS DE PRIVACIDADE
+					</a>
+					<a class="mobile-bar-item__header collapsed" href="termos-de-uso.html">
+						TERMOS DE USO
 					</a>
 					<div id="mobile_collapse_1" class="collapse mobile-bar-item__body">
 						
