--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 	<meta name="description" content="Rei do Elojob é o serviço ideal para você subir o elo da sua conta! Boosting (Elojob), MD10 , Duo Boost, Coaching">
 	<meta name="author" content="Rei do Elojob">
 	<meta name="keywords" content="elojob md10 eloboost elo upar duoboost">
+	<meta property="og:locale" content="pt_BR">
+	<meta property="og:url" content="https://www.reidoelojob.com">
+	<meta property="og:title" content="Rei do Elojob">
+	<meta property="og:site_name" content="Rei do Elojob">
+	<meta property="og:description" content="Rei do Elojob é o serviço ideal para você subir o elo da sua conta! Boosting (Elojob), MD10 , Duo Boost, Coaching">
+	<meta property="og:image" content="images/rei_cortada.png">
+	<meta property="og:image:type" content="image/jpeg">
+
+<meta property="og:type" content="website">
 
 
 	<!-- Favicons
@@ -149,9 +158,6 @@
 					</a>
 				</li>
 			</ul>
-			<div class="d-flex justify-content-center">
-				<a href="politicas-de-privacidade.html" class="politicas">Políticas de privacidade</a>
-			</div>
 		</footer>
 		<!-- Footer / End -->
 
