--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 			<nav class="main-nav">
 				<ul class="main-nav__list">
 					<li class="">
-            			<a href="elo-boost.html">ELO BOOST</a>
+            			<a href="elo-boost">ELO BOOST</a>
 					</li>
 					<li class="">
-            			<a href="md10.html">MD10</a>
+            			<a href="md10">MD10</a>
 					</li>
 				</ul>
 			</nav>
@@ -94,7 +94,7 @@
 		
 			<!-- Logo - Image Based -->
 			<div class="header-logo header-logo--img">
-				<a href="Index.html"><img src="images/rei_cortada.png" srcset="images/rei_cortada.png" alt="NEXTLEVEL"></a>
+				<a href="Index"><img src="images/rei_cortada.png" srcset="images/rei_cortada.png" alt="NEXTLEVEL"></a>
 			</div>
 			<!-- Logo - Image Based / End -->
 		
@@ -102,11 +102,11 @@
 			<nav class="main-nav">
 				<ul class="main-nav__list">
 					<li class="">
-            			<a href="duo-boost.html">DUO BOOST</a>
+            			<a href="duo-boost">DUO BOOST</a>
 					</li>
 					
 					<li class="">
-						<a href="coach.html">COACH</a>
+						<a href="coach">COACH</a>
 					</li>
 				</ul>
 			</nav>
@@ -120,7 +120,7 @@
 			
 			<div class="site-content__center">
 				<h1 class="text-white landing-title"><span class="subtitle landing-subtitle">Encontre aqui a sua</span>Proxima Fase</h1>
-				<a href="elo-boost.html" class="btn btn-primary btn-lg btn--landing"><span>COMECE POR AQUI</span></a>
+				<a href="elo-boost" class="btn btn-primary btn-lg btn--landing"><span>COMECE POR AQUI</span></a>
 			</div>
 			<div class="video-full-bg">
 				<!-- Video Highlight -->
