--- a/politicas-de-privacidade.html
+++ b/politicas-de-privacidade.html
@@ -94,7 +94,7 @@
 		
 			<!-- Logo - Image Based -->
 			<div class="header-logo header-logo--img">
-				<a href="index.html"><img src="images/rei_cortada.png" alt="Necromancers"></a>
+				<a href="index"><img src="images/rei_cortada.png" alt="Necromancers"></a>
 			</div>
 			<!-- Logo - Image Based / End -->
 		
@@ -102,11 +102,11 @@
 			<!-- Main Navigation -->
 			<nav class="main-nav">
 				<ul class="main-nav__list">
-					<li class=""><a href="index.html">Início</a></li>
-					<li class=""><a href="elo-boost.html">Elo Boost</a></li>
-                    <li class=""><a href="duo-boost.html">Duo Boost</a></li>
-					<li class="active"><a href="md10.html">MD10</a></li>
-                    <li class=""><a href="coach.html">COACH</a></li>
+					<li class=""><a href="index">Início</a></li>
+					<li class=""><a href="elo-boost">Elo Boost</a></li>
+                    <li class=""><a href="duo-boost">Duo Boost</a></li>
+					<li class="active"><a href="md10">MD10</a></li>
+                    <li class=""><a href="coach">COACH</a></li>
 				</ul>
 				</ul>
 			</nav>
@@ -381,37 +381,37 @@
 					<!-- <button class="dl-trigger">Open Menu</button> -->
 					<ul class="dl-menu dl-menuopen is-hidden-mobile">
 						<li>
-							<a href="index.html">
+							<a href="index">
 								Inicio
 							</a>
 						</li>
 						<li>
-							<a href="elo-boost.html">
+							<a href="elo-boost">
 								Elo Boost
 							</a>
 						</li>
 						<li>
-							<a href="duo-boost.html">
+							<a href="duo-boost">
 								Duo Boost
 							</a>
 						</li>
 						<li>
-							<a href="md10.html">
+							<a href="md10">
 								MD10
 							</a>
 						</li>
 						<li>
-							<a href="coach.html">
+							<a href="coach">
 								COACH
 							</a>
 						</li>
 						<li>
-							<a href="politicas-de-privacidade.html">
+							<a href="politicas-de-privacidade">
 								POLÍTICAS DE PRIVACIDADE
 							</a>
 						</li>
 						<li>
-							<a href="termos-de-uso.html">
+							<a href="termos-de-uso">
 								TERMOS DE USO
 							</a>
 						</li>	
@@ -420,25 +420,25 @@
 			</div>
 			<ul class="menu-panel__mobile-bar list-unstyled d-md-none">
 				<li class="mobile-bar-item">
-					<a class="mobile-bar-item__header collapsed" href="index.html">
+					<a class="mobile-bar-item__header collapsed" href="index">
 						Inicio
 					</a>
-					<a class="mobile-bar-item__header collapsed" href="elo-boost.html">
+					<a class="mobile-bar-item__header collapsed" href="elo-boost">
 						Elo Boost
 					</a>
-					<a class="mobile-bar-item__header collapsed" href="duo-boost.html">
+					<a class="mobile-bar-item__header collapsed" href="duo-boost">
 						Duo Boost
 					</a>
-					<a class="mobile-bar-item__header collapsed" href="md10.html">
+					<a class="mobile-bar-item__header collapsed" href="md10">
 						MD10
 					</a>
-					<a class="mobile-bar-item__header collapsed" href="coach.html">
+					<a class="mobile-bar-item__header collapsed" href="coach">
 						COACH
 					</a>
-					<a class="mobile-bar-item__header collapsed" href="politicas-de-privacidade.html">
+					<a class="mobile-bar-item__header collapsed" href="politicas-de-privacidade">
 						POLÍTICAS DE PRIVACIDADE
 					</a>
-					<a class="mobile-bar-item__header collapsed" href="termos-de-uso.html">
+					<a class="mobile-bar-item__header collapsed" href="termos-de-uso">
 						TERMOS DE USO
 					</a>
 					<div id="mobile_collapse_1" class="collapse mobile-bar-item__body">
