--- a/coach.html
+++ b/coach.html
@@ -111,8 +111,8 @@
 					<li class=""><a href="index">Início</a></li>
 					<li class=""><a href="elo-boost">Elo Boost</a></li>
                     <li class=""><a href="duo-boost">Duo Boost</a></li>
-					<li class="active"><a href="md10">MD10</a></li>
-                    <li class=""><a href="coach">COACH</a></li>
+					<li class=""><a href="md10">MD10</a></li>
+                    <li class="active"><a href="coach">COACH</a></li>
 				</ul>
 			</nav>
 			<!-- Main Navigation / End -->
@@ -325,7 +325,7 @@
 					<a class="mobile-bar-item__header collapsed" href="md10">
 						MD10
 					</a>
-					<a class="mobile-bar-item__header collapsed" href="coach">
+					<a class="mobile-bar-item__header collapsed active" href="coach">
 						COACH
 					</a>
 					<a class="mobile-bar-item__header collapsed" href="politicas-de-privacidade">
