--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 	<meta property="og:description" content="Rei do Elojob é o serviço ideal para você subir o elo da sua conta! Boosting (Elojob), MD10 , Duo Boost, Coaching">
 	<meta property="og:image" content="images/rei_cortada.png">
 	<meta property="og:image:type" content="image/jpeg">
-
-<meta property="og:type" content="website">
+	<meta property="og:type" content="website">
 
 
 	<!-- Favicons
@@ -46,9 +45,18 @@
 
 	<!-- Custom CSS-->
 	<link href="css/custom.css" rel="stylesheet">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-212040950-1">
+	</script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
+	  gtag('config', 'UA-212040950-1');
+	</script>
+	<!-- End Global site tag -->	
 </head>
-
 <style>
 	html {
 		overflow-y: hidden;
