--- a/elo-boost.html
+++ b/elo-boost.html
@@ -51,8 +51,18 @@
             var num=Math.round((max-min)*Math.random()+min)
             document.getElementById("visits").innerHTML=num
         }
-    </script>
+    	</script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-212040950-1">
+	</script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
+	  gtag('config', 'UA-212040950-1');
+	</script>
+	<!-- End Global site tag -->	
 </head>
 <style>
     .header-logo--img {
