--- a/coach.html
+++ b/coach.html
@@ -52,6 +52,17 @@
             document.getElementById("visits").innerHTML=num
         }
     </script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-212040950-1">
+	</script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-212040950-1');
+	</script>
+	<!-- End Global site tag -->	
 
 </head>
 <style>
