--- a/politicas-de-privacidade.html
+++ b/politicas-de-privacidade.html
@@ -42,6 +42,17 @@
 	<!-- Template CSS-->
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-212040950-1">
+	</script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-212040950-1');
+	</script>
+	<!-- End Global site tag -->	
 
 </head>
 <style>
