--- a/coach.html
+++ b/coach.html
@@ -196,7 +196,7 @@
 												<path d="M11.008,24h1.997v-2h-1.997V24z M19.99,2V0H4.023v2H0l0.032,2.032C0.058,5.667,0.421,11,4.008,11H4.22c0.726,2.605,3.432,4.608,6.788,4.944V18H9.013c-2.206,0-3.993,1.791-3.993,4v2h1.996v-2c0-1.104,0.895-2,1.997-2h5.988c1.1,0,1.995,0.896,1.995,2v2h1.996v-2c0-2.209-1.787-4-3.991-4h-1.996v-2.056c3.356-0.336,6.062-2.339,6.788-4.944h0.198c3.588,0,3.95-5.333,3.977-6.968L24,2H19.99z M4.008,9C2.106,9,2.027,4,2.027,4h1.981V9z M17.994,9.601c0,2.385-2.742,4.399-5.987,4.399c-3.246,0-5.988-2.015-5.988-4.399V2h11.975V9.601z M19.991,9V4h1.98C21.972,4,21.893,9,19.991,9z"/>
 											</svg>
 										</div>
-										<div class="counter__number">5</div>
+										<div class="counter__number">6</div>
 										<div class="counter__label">Anos no mercado</div>
 									</div>
 								</div>
@@ -207,7 +207,7 @@
 												<path d="M4.587,15.001H2.459C3.436,18.107,5.893,20.55,9,21.527v-2.134C7.001,18.58,5.397,17.001,4.587,15.001z M2.459,9h2.128C5.397,7,7.001,5.42,9,4.606V2.474C5.893,3.452,3.435,5.892,2.459,9z M19.413,9h2.128C20.564,5.893,18.107,3.452,15,2.474v2.133C16.998,5.42,18.603,7,19.413,9z M15,19.394v2.134c3.106-0.978,5.564-3.42,6.541-6.526h-2.128C18.603,17.001,16.998,18.58,15,19.394z M11,8h2V0h-2V8z M11,24h2v-7.999h-2V24z M16,11.001v2h8v-2H16z M8,11.001H0v2h8V11.001z M11,13.001h2v-2h-2V13.001z"/>
 											</svg>
 										</div>
-										<div class="counter__number">104</div>
+										<div class="counter__number">118</div>
 										<div class="counter__label">Número de Boosters</div>
 									</div>
 								</div>
@@ -262,7 +262,11 @@
 					<h1 class="page-title h3 mb-4">O REI DO ELOJOB</h1>
 					<div class="page-content">
 						<p>
-							O Rei do elojob tem 5 anos de experiência e milhares de serviços de Elojob (elo boost), Duo boost e Coaching concluídos com sucesso, certificando a grande satisfação de nossos clientes.
+							Você poderá acompanhar as partidas ao vivo no nosso Discord, os boosters fazem transmissões ao vivo das partidas para você assistir ele subindo a sua conta!
+							Você aprenderá bastante com essa nova experiência!
+						</p>
+						<p>
+							O Rei do Elojob tem 6 anos de experiência e milhares de serviços de Elojob (eloboost), Duo boost e Coaching concluídos com sucesso, certificando a grande satisfação de nossos clientes.
 						</p>
 						<h4>Porque escolher O REI DO ELOJOB?</h4>
 						<p>
