--- a/politicas-de-privacidade.html
+++ b/politicas-de-privacidade.html
@@ -2,7 +2,15 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-D0CR87SG34"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-D0CR87SG34');
+</script>
 	<!-- Basic Page Needs
 	================================================== -->
 	<title>Rei do Elojob | Políticas de Privacidade</title>
